changes in typing'

--- a/index.html
+++ b/index.html
@@ -836,7 +836,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed(".typing", {
-      strings: ["Data Enthusiast", "Problem Solver"],
+      strings: ["a Data Enthusiast", "a Problem Solver"],
       loop: true,
       typeSpeed: 65,
       backSpeed: 65,
