--- a/index.html
+++ b/index.html
@@ -107,13 +107,7 @@
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <p>
-            Being a data enthusiast, my passion lies in developing the utilization of data and information that can help
-            business organizations achieve their goals effectively.
-            My technical skills include languages such as Python and SQL, libraries and packages such as scikit-Learn,
-            Pandas, NumPy, SciPy, Matplotlib, Seaborn, Plotly along with business intelligence tools like Power BI and
-            MS Excel.
-            My past experiences have strengthened my passion towards data and i look forward to work in a more
-            challenging environment.
+            As a data enthusiast, my passion lies in developing the utilization of data and information to help business organizations achieve their goals effectively. My technical skills include a good understanding of languages such as Python and SQL, libraries/packages such as scikit-Learn, Pandas, NumPy, SciPy, Matplotlib, Seaborn and Plotly along with business intelligence tools like Power BI and MS Excel. My past experiences have strengthened my passion towards data and I look forward to working in a more challenging environment
 
           </p>
           <div class="row">
