--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           </li>
           <li>
             <a
-              href="https://drive.google.com/file/d/1Lv7inF57UavvqqBEGIw1PQjC_8gvJVsW/view"
+              href="https://drive.google.com/file/d/15boWXhNoMN1497QyRO_wW1nWvPbuVRQw/view?usp=sharing"
               target="_blank"
             >
               <span>Resume</span></a
@@ -432,11 +432,39 @@
         <div class="col-lg-12" data-aos="fade-up">
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
             <h4 style="text-align: left">
+              <a href="https://crewasis.ai/" target="_blank" style="color: #12d640">CREWASIS</a><br />
+            </h4>
+            <h5 style="text-align: left">January 2024 - June 2024</h5>
+            <p style="text-align: left; color: #fff">
+              <em>Data Science Intern</I> </em>
+            </p>
+            <ul style="text-align: left">
+              <li>
+                Developed a Python-based web scraping solution using BeautifulSoup 
+                and Newspaper3k to extract and process text data from various online sources
+              </li>
+              <li>
+                Utilized multiprocessing pools to efficiently handle large-scale data scraping tasks,
+                allowing concurrent execution of multiple scraping processes and significantly improving processing speed
+              </li>
+              <li>
+                Utilized Latent Semantic Indexing (LSI) with Gensim on large datasets, analyzing millions of data points
+              </li>
+              <li>
+                Developed K-Means clustering to group similar words,
+                optimizing clusters through intra-cluster variance calculations, resulting in actionable insights
+              </li>
+            </ul>
+          </div>
+
+
+          <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
+            <h4 style="text-align: left">
               <a href="https://www.orbo.ai" target="_blank" style="color: #12d640">Orbo.Ai</a><br />
             </h4>
             <h5 style="text-align: left">June 2021 - September 2021</h5>
             <p style="text-align: left; color: #fff">
-              <em>Software Engineer </em>
+              <em>Python Developer</em>
             </p>
             <ul style="text-align: left">
               <li>
@@ -730,11 +758,11 @@
       </div>
       <div class="row">
         <div class="col-md-3 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-          <a href="https://drive.google.com/file/d/1J4ylJksTd8kCyALaNGG63a9NpruCgymt/view?usp=sharing" target="_blank">
+          <a href="https://drive.google.com/file/d/15boWXhNoMN1497QyRO_wW1nWvPbuVRQw/view?usp=sharing" target="_blank">
             <div class="icon"><i class="icofont-page"></i></div>
           </a>
           <h4 class="title">
-            <a href="https://drive.google.com/file/d/1J4ylJksTd8kCyALaNGG63a9NpruCgymt/view?usp=sharing"
+            <a href="https://drive.google.com/file/d/15boWXhNoMN1497QyRO_wW1nWvPbuVRQw/view?usp=sharing"
               target="_blank">Resume</a>
           </h4>
           <p class="description" style="color: #fff">
