--- a/index.html
+++ b/index.html
@@ -440,8 +440,8 @@
             </p>
             <ul style="text-align: left">
               <li>
-                Developed a Python-based web scraping solution using BeautifulSoup 
-                and Newspaper3k to extract and process text data from various online sources
+                Developed a Python-based web scraping solution using BeautifulSoup and Newspaper3k to extract and process text data
+from approximately 2,000 unique online sources, at an average rate of 300 sources per hour
               </li>
               <li>
                 Utilized multiprocessing pools to efficiently handle large-scale data scraping tasks,
