Update resume link

--- a/index.html
+++ b/index.html
@@ -441,18 +441,20 @@
             <ul style="text-align: left">
               <li>
                 Developed a Python-based web scraping solution using BeautifulSoup and Newspaper3k to extract and process text data
-from approximately 2,000 unique online sources, at an average rate of 300 sources per hour
+                from approximately 2,000 unique online sources, at an average rate of 300 sources per hour
               </li>
               <li>
-                Utilized multiprocessing pools to efficiently handle large-scale data scraping tasks,
-                allowing concurrent execution of multiple scraping processes and significantly improving processing speed
+                Utilized multiprocessing pools to efficiently handle large-scale data scraping tasks, allowing concurrent execution of up to
+                10 scraping processes simultaneously. This approach improved processing speed by approximately 50%, increasing the rate
+                from 200 sources per hour to 300 sources per hour
               </li>
               <li>
                 Utilized Latent Semantic Indexing (LSI) with Gensim on large datasets, analyzing millions of data points
               </li>
               <li>
-                Developed K-Means clustering to group similar words,
-                optimizing clusters through intra-cluster variance calculations, resulting in actionable insights
+                Developed K-Means clustering models, leveraging intra-cluster variance calculations to derive actionable insights, enabling
+                clients to prioritize strategies, enhance product offerings and optimize marketing campaigns.
+
               </li>
             </ul>
           </div>
@@ -758,11 +760,11 @@ from approximately 2,000 unique online sources, at an average rate of 300 source
       </div>
       <div class="row">
         <div class="col-md-3 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-          <a href="https://drive.google.com/file/d/15boWXhNoMN1497QyRO_wW1nWvPbuVRQw/view?usp=sharing" target="_blank">
+          <a href="https://drive.google.com/file/d/1pxCwfx8TdP-_xajFug5dkfWPwPIaskmV/view?usp=sharing" target="_blank">
             <div class="icon"><i class="icofont-page"></i></div>
           </a>
           <h4 class="title">
-            <a href="https://drive.google.com/file/d/15boWXhNoMN1497QyRO_wW1nWvPbuVRQw/view?usp=sharing"
+            <a href="https://drive.google.com/file/d/1pxCwfx8TdP-_xajFug5dkfWPwPIaskmV/view?usp=sharing"
               target="_blank">Resume</a>
           </h4>
           <p class="description" style="color: #fff">
