Updated experience section in index.html

--- a/index.html
+++ b/index.html
@@ -310,9 +310,9 @@
             <h4 style="text-align: left">
               <a href="https://www.orbo.ai" target="_blank" style="color: #12d640">Orbo.Ai</a><br />
             </h4>
-            <h5 style="text-align: left">June 2021 - September 2021</h5>
+            <h5 style="text-align: left">June 2021 - December 2021</h5>
             <p style="text-align: left; color: #fff">
-              <em>Python Developer</em>
+              <em>Data Analyst</em>
             </p>
             <ul style="text-align: left">
               <li>
