--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
             <a href="#skills"> <span>Skills</span></a>
           </li>
           <li>
-            <a href="https://drive.google.com/file/d/1pxCwfx8TdP-_xajFug5dkfWPwPIaskmV/view?usp=sharing"
+            <a href="https://drive.google.com/drive/folders/1YcbRvEbV7g3sc09VJPMgWEB2vSW8ZR-t?usp=sharing"
               target="_blank">
-              <span>Resume</span></a>
+              <span>Technical Docs</span></a>
           </li>
           <li>
             <a href="#contacts"> <span>Contact</span></a>
@@ -275,7 +275,7 @@
             <h4 style="text-align: left">
               <a href="https://crewasis.ai/" target="_blank" style="color: #12d640">CREWASIS</a><br />
             </h4>
-            <h5 style="text-align: left">January 2024 - August 2024</h5>
+            <h5 style="text-align: left">January 2024 - June 2024</h5>
             <p style="text-align: left; color: #fff">
               <em>Data Science Intern</I> </em>
             </p>
@@ -301,6 +301,20 @@
                 clients to prioritize strategies, enhance product offerings and optimize marketing campaigns.
 
               </li>
+              <li>
+                Developed onboarding technical documentation to ensure seamless knowledge transfer for new product teams, streamlining workflows and reducing onboarding time
+
+              </li>
+              <li>
+                Authored and automated LSI documentation, improving the understanding of Latent Semantic Indexing implementation and its role in refining the product roadmap.
+
+              </li>
+              <li>
+                Created Standard Operating Procedures (SOPs) for the Data Engineering team, standardizing workflows, improving efficiency, 
+                and ensuring consistent data processing practices
+
+              </li>
+
             </ul>
           </div>
 
@@ -329,6 +343,14 @@
                 Successfully implemented a highly efficient function that enables keyword search in an Excel file
                 identifying
                 the position and returning its index value to identify the expiry date of medicine.
+              </li>
+              <li>
+                Led end-to-end documentation by creating Business Requirement Documents (BRD), Functional Specification Documents (FSD), 
+                and Integration Requirement Documents (IRD) to define project scope, technical needs and operational workflows
+              </li>
+              <li>
+                Streamlined operations with a high-efficiency Excel keyword search, 
+                cutting lookup time by 30% and improving data accessibility, documented in release note for seamless adoption.
               </li>
             </ul>
           </div>
