--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
             </h4>
             <h5 style="text-align: left">January 2024 - June 2024</h5>
             <p style="text-align: left; color: #fff">
-              <em>Data Science Intern</I> </em>
+              <em> Data Analyst Intern </I> </em>
             </p>
             <ul style="text-align: left">
               <li>
@@ -326,7 +326,7 @@
             </h4>
             <h5 style="text-align: left">June 2021 - December 2021</h5>
             <p style="text-align: left; color: #fff">
-              <em>Data Analyst</em>
+              <em>Data Operations Analyst</em>
             </p>
             <ul style="text-align: left">
               <li>
@@ -360,7 +360,7 @@
             </h4>
             <h5 style="text-align: left">Auguest 2020 - September 2020</h5>
             <p style="text-align: left; color: #fff">
-              <em>Data science Intern</em>
+              <em>Data Analyst Intern</em>
             </p>
             <ul style="text-align: left">
               <li>
@@ -384,7 +384,7 @@
             </h4>
             <h5 style="text-align: left">March 2019 - February 2020</h5>
             <p style="text-align: left; color: #fff">
-              <em>Co-Founder</em>
+              <em>Business Operations | Co-Founder </em>
             </p>
             <ul style="text-align: left">
               <li>
